# wasm-separation-kernel

./: Cargo.toml  README.md  flake.nix  notes.md
fn_thermostat/: .gitignore  Makefile
fn_thermostat/src/: main.c  pid_ctrl.h
linux_draft/: Cargo.toml
linux_draft/src/: main.rs
lwsk/: Cargo.toml  example_blueprint.toml
lwsk/src/: blueprint.rs  cli.rs  kernel.rs  lib.rs  main.rs  schedule.rs
lwsk/src/io/: mod.rs  udp.rs
partition-0/: Cargo.toml
partition-0/src/: lib.rs
