[package]
name = "lwsk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
minicbor = "0.20"
postcard = "1.0.4"
pretty_env_logger = { version = "0.4.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.7.2", optional = true }
wasmi = { version = "0.28.0", default-features = false }

[features]
default = ["std"]
std = ["pretty_env_logger", "serde/std", "toml", "wasmi/std" ]
