[package]
name = "lwsk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true}
log = "*"
minicbor = "0.20"
postcard = "1"
pretty_env_logger = { version = "0.4.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "*", optional = true }
wasmi = { version = "*", default-features = false }

[features]
default = ["std"]
std = ["clap", "pretty_env_logger", "serde/std", "toml", "wasmi/std" ]
