[package]
name = "lwsk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true}
log = "*"
minicbor = "0.25"
postcard = "1"
pretty_env_logger = { version = "0.5.0", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "*", optional = true }
wasmi = { version = "*", default-features = false }
thiserror = "1.0"

[features]
default = ["std"]
std = ["clap", "pretty_env_logger", "serde/std", "toml", "wasmi/std" ]
